fix sonarqube error